--- a/wsls-del/wsls-del.vcxproj.filters
+++ b/wsls-del/wsls-del.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lcopy.cpp">
+    <ClCompile Include="wsls-del.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
