--- a/wsls-copy/wsls-copy.vcxproj.filters
+++ b/wsls-copy/wsls-copy.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ldel.cpp">
+    <ClCompile Include="wsls-copy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
