--- a/wsls-del/wsls-del.vcxproj
+++ b/wsls-del/wsls-del.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{B0F05409-C785-4208-A893-D79C451B1A66}</ProjectGuid>
+    <ProjectGuid>{B0860421-1CFB-49FF-BF46-F52041E747E2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>copy</RootNamespace>
+    <RootNamespace>wsls-del</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>lcopy</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,7 +151,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="lcopy.cpp" />
+    <ClCompile Include="wsls-del.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
