Add x86 .exe patch support, TODO: a.instal script need to update, b.enum exe recursive and detect it arch to patch, c. tidy patch, just one copy to ndk-root, x86/wsLongPaths.dll, x86/wow64helper.exe; x64/wsLongPaths.dll, x64/wow64helper.exe, d. only copy wsls-core.exe to bridge original exe one by one.

--- a/libwsls/libwsls.vcxproj
+++ b/libwsls/libwsls.vcxproj
@@ -125,6 +125,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
