--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,9 +15,8 @@ install:
   - git submodule update --init --recursive
 
 build_script:
-  - cd build
   - mkdir build_win
   - cd build_win
   - cmake --version
-  - cmake %GEN% ../../
+  - cmake %GEN% ../
   - cmake --build . --config Release --clean-first
