--- a/.github/workflows/windows_x86.yml
+++ b/.github/workflows/windows_x86.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
+      shell: cmd
       run: cmake -E make_directory ${{runner.workspace}}/build_x86
 
     - name: Configure CMake
