--- a/.github/workflows/windows_x86.yml
+++ b/.github/workflows/windows_x86.yml
@@ -33,10 +33,10 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source 
       # and build directories, but this is only available with CMake 3.13 and higher.  
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake -S %GITHUB_WORKSPACE% -B %GITHUB_WORKSPACE%/build_x86 -DCMAKE_BUILD_TYPE=%BUILD_TYPE%
+      run: cmake -S %GITHUB_WORKSPACE% -B %GITHUB_WORKSPACE%/build_x86 -DCMAKE_BUILD_TYPE=%BUILD_TYPE% -A Win32
 
     - name: Build
       working-directory: ${{runner.workspace}}
       shell: cmd
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build build_x86 --config %BUILD_TYPE% --target INSTALL
+      run: cmake --build %GITHUB_WORKSPACE%/build_x86 --config %BUILD_TYPE% --target INSTALL
